Changelog
=========

1.3 (unreleased)
----------------

- disable_plaintext_indexing and reenable_plaintext_indexing methods
  [ebrehault]

- use _unrestrictedGetObject to get object from brain
  [ebrehault]


1.2 (2014-01-13)
----------------

- updateIndexes works with ZCTextIndex,
  index is created with plone lexicon / Okapi BM25 Rank.
  [thomasdesvenain]

- Fix removal of index at updateIndexes.
  [thomasdesvenain]

- Upgrade step destination can be an integer.
  [thomasdesvenain]

- We can provide an interface as portal_types value
  for updated content selection.
  [thomasdesvenain]


1.1.5 (2013-10-23)
------------------

- Use ProgressHandler in migrateContent.
  [vincentfretin]

- IUpgradeTool can also adapt portal and directory import context.
  [thomasdesvenain]


1.1.4 (2013-09-25)
------------------

- updateIndexes remove old index if it doesn't have the good type.
  [thomasdesvenain]

- Added a method to add metadata in catalog.
  [thomasdesvenain]


1.1.3 (2013-08-27)
------------------

- Fixed updateObjectRoleMappings to use all workflows of the chain,
  not only the first one.
  [vincentfretin]


1.1.2 (2013-07-18)
------------------

- refreshResources method works if kss is not installed.
  [thomasdesvenain]


1.1.1 (2012-12-10)
------------------

- Fixed interface documentation.
  [thomasdesvenain]

- Better error handling when profile passed as runUpgradeStep method parameter
  doesn't exist.
  [thomasdesvenain]


1.1 (2012-10-05)
----------------

- monkey patch EtagSupport.http__refreshEtag during content migrations
  to not modify objects.
  [vincentfretin]

- Added a parameter to stop migration after n contents migrated.
  [thomasdesvenain]


1.0.1 (2012-09-03)
------------------

- Fixed run profile.


1.0 (2012-08-24)
----------------

- Package created using templer
  []